removed out/ from git; code clean up to java 1.10; package pmgame; resources under root src